# rust-util

./: .gitmodules  3000.json  Cargo.toml  README.md  http.eg  paulo@30.json  server.pem  sha256
.github/workflows/: rust.yml
src/: lib.rs  main.rs
