[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26"
www-authenticate = "0.4"
#base64 = "0.21"
#sha2 = "0.10"
md5 = "0.7"
actix-web = "4"
sha256 = "1.1.3"
json = "0.12.4"
http = { path="./http" }
httparse = { path="./httparse" }
rand = "0.8.5"
regex = "1.8.3"
native-tls = "0.2.11"
chrono = "0.4.26"
timer = "0.2.0"
